# PortfolioZero

./: **Manifesto do Estado Atual** 2026-01-23.md  .gitignore  Dockerfile  FLUXOGRAMA ATUAL (24.01.26).md  PORTIFOLIOZERO_GUIA_MESTRE_CONGELADO_V1.md  PORTIFOLIOZERO_GUIA_UNICO_CONGELADO.md  README.md  pyproject.toml
0_desenvolvimentos/: PORTIFOLIOZERO_PONTO_DE_SITUACAO_PARA_NOVO_CHAT.md
0_desenvolvimentos/data/: README.md
docs/: DEVELOPMENT_STATUS.md  PORTFOLIOZERO — PLAN_V2 (consolidado).md  PORTFOLIOZERO — Plano V2.md  PORTFOLIOZERO_PLAN_V1.md  PORTIFOLIOZERO — Acordo Operacional Definitivo (Dry-Run).md  PORTIFOLIOZERO — Manifesto do Estado Atual.md  TASK_008_COMPLETION_REPORT.md  TASK_010_COMPLETION_REPORT.md  TASK_011_COMPLETION_REPORT.md  TPM_BRIEFING_PORTFOLIOZERO.md
notebooks/: build_universe_candidates.ipynb  select_universe_supervised.ipynb
scripts/: agno_api_map.py  agno_entrypoint_exec.py  agno_entrypoint_select.py  agno_probe.py  agno_runner.py  audit_market_prices_post_daily.py  build_portfolio_snapshot_v1_from_parquet.py  build_universe_candidates.py  build_universe_supervised.py  fetch_market_data.py  generate_daily_decision_sell_only_v1.py  generate_decision_package_v1.py  generate_portfolio_snapshot_v0.py  generate_risk_package_v0.py  generate_sample_market_data.py  ingest_portfolio_positions_real_parquet_v1.py  inspect_portfolio_snapshot_contract_v0.py  select_universe_candidates_parquet.py  update_market_data_daily.py  validate_decision_package_daily_v1.py  validate_risk_package_v0.py  validate_universe_supervised_output.py
(+258 files in other folders)
